    - vecpmex(...)                    least positive value not in list
    - vecuniq(...)                    remove duplicates from list of integers
    - vecsort(@L)                     numerically sort integer list
    - vecsortr(\@L)                   numerically sort integer list ref
    - vecsortrr(\@L)                  as vecsortr but returns a list ref
    - setbinop {...} \@A[,\@B]        apply op to cross product of set(s)
    - sumset(\@A[,\@B])               new set from a+b {a:A,b:B}
    - setunion(\@A,\@B)               union of two integer lists
    - setintersect(\@A,\@B)           intersection of two integer lists
    - setminus(\@A,\@B)               difference of two integer lists
    - setdelta(\@A,\@B)               symmetric difference of two int lists
    - toset(\@A)                      convert to unique sorted integer list
    - is_subset(\@A,\@B)              is integer list A a subset of B
    - is_sidon_set(\@L)               is integer list L a Sidon set
    - is_sumfree_set(\@L)             is integer list L a sum-free set


    [FIXES]

    - nth_ramanujan_* returns undef with input of 0.

    - PP code for is_polygonal with n=0 was wrong.  Fixed and refactored.

    - Some large results that used GMP are properly objectified.

    - When using GMP, native int results are no longer objectified.

    - AKS was modding a with r, since 2012.

    - is_totient(2^k) with k >= 33, found by Trizen in 2019.

    - forsquarefree and forfactored were missing a destroy.  From Trizen.

    - todigitstring with non-standard bases and long strings.  From Trizen.

    - Fix v0.62 breaking extended precision long doubles on some machines.
      Big difference in epsilon-level precision for LambertW, Li, Zeta.

    - sieve_range documentation for depth didn't exactly match the XS code.

    - is_extra_strong_lucas_pseudoprime(5) was returning 0.

    - lucas_sequence wasn't right for some outlier cases.  This did not