@@ -95,6 +95,7 @@ my @functions =  qw(
       vecany vecall vecnotall vecnone vecfirst vecfirstidx vecmex vecpmex
       vecsort vecsortr vecsortrr
       setbinop sumset setunion setintersect setminus setdelta toset
+      setcontains
       is_subset is_sidon_set is_sumfree_set
       moebius mertens liouville sumliouville prime_omega prime_bigomega
       euler_phi jordan_totient exp_mangoldt sumtotient
